--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,8 @@
   <body ng-app="todo" ng-controller="TodoCtrl">
     <!-- Center Content -->
       <ion-side-menus>
-        <ion-side-menus-content>
+        <!-- Center content -->
+        <ion-side-menu-content>
           <ion-header-bar class="bar-dark">
             <h1 class="title">Todo</h1>
           </ion-header-bar>
@@ -47,7 +48,7 @@
               </ion-item>
             </ion-list>
           </ion-content>
-        </ion-side-menus-content>
+        </ion-side-menu-content>
 
         <!-- Left Menu -->
         <ion-side-menu side="left">
